<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_top_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/infotextRelative"
        android:textSize="25sp"

        />
    <Button
        android:id="@+id/relBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/zametki"
        android:textColor="@color/white" />
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/machovka_guitar"
        android:layout_below="@id/text_top_left"
        android:layout_marginStart="180dp"
        android:layout_marginTop="50dp"/>


    <EditText
        android:id="@+id/EdiRel"
        android:layout_width="384dp"
        android:layout_height="78dp"
        android:layout_below="@id/dolla"

        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/comment" />

    <ImageView
        android:id="@+id/dolla"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/dollar"
        android:layout_below="@id/relBut"
        android:layout_marginStart="180dp"
        android:layout_marginTop="50dp"/>

</RelativeLayout>