<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        android:text="@string/infotextConstraint"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintTop_toTopOf="@+id/activity_main"
        app:layout_constraintVertical_bias="0.079" />


    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/machovka_guitar"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/zametki"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"

        tools:layout_editor_absoluteX="157dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="111dp"
            android:layout_height="122dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button"
         />

        <EditText
            android:id="@+id/editText"
            android:layout_width="383dp"
            android:layout_height="64dp"
            android:layout_marginTop="36dp"
            android:hint="@string/comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <ImageView
            android:id="@+id/imageViewo"
            android:layout_width="111dp"
            android:layout_height="122dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button"
            app:srcCompat="@drawable/dollar" />

</androidx.constraintlayout.widget.ConstraintLayout>