<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FirstFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/infotextLiner"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/colorPrimary"
        />


    <TextView
        android:id="@+id/txtmen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:text="Меняемое название"
        android:textSize="20sp" />
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/machovka_guitar"
        android:layout_marginStart="140dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/buttonL"
        android:layout_marginTop="10dp"
        android:layout_width="310dp"
        android:layout_height="64dp"
        android:layout_marginStart="50dp"
        android:text="@string/zametki"

        />
    <Button
        android:id="@+id/buttonL2"
        android:layout_marginTop="1dp"
        android:layout_width="310dp"
        android:layout_height="64dp"
        android:layout_marginStart="50dp"
        android:text="назад"
        android:onClick="decl"
        />
    <Button
        android:id="@+id/buttonTransfer"
        android:layout_marginTop="1dp"
        android:layout_width="310dp"
        android:layout_height="64dp"
        android:layout_marginStart="50dp"
        android:text="Переход в SecondActivity"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/buttonSend"
        android:layout_marginTop="1dp"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:text="Передать данные"
        android:onClick="onClick"
        />


    <ImageView
        android:id="@+id/dollarwing"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/dollar" />

    <EditText
        android:id="@+id/editField"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="2dp"
        android:hint="@string/comment"

        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.example.myapplication3.SecondFragment"
        tools:layout="@layout/fragment_second"/>
</LinearLayout>